--- a/nosotros.html
+++ b/nosotros.html
@@ -108,23 +108,20 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
-    <div>
-  <div class="nosotros_parra" >
-    <div class="col-sm-12 col-md-6 col-lg-4">
-      <p class="Nos-par">Somos un hogar con una trayectoria marcada, donde ponemos en primer lugar a la persona, buscando mejorar su calidad de vida, a través de distintas terapias.
-        Contamos con un equipo profesional joven pero bien calificado. Con el correr de los años hemos mejorado en nuestro campo, donde creemos en la importancia de la inclusión social de nuestros residentes y concurrentes.</p>
+  <div class="row_Nos">
+      <div class="col_Nos">
+          <p>Somos un hogar con una trayectoria marcada, donde ponemos en primer lugar a la persona, buscando mejorar su calidad de vida, a través de distintas terapias.
+            Contamos con un equipo profesional joven pero bien calificado. Con el correr de los años hemos mejorado en nuestro campo, donde creemos en la importancia de la inclusión social de nuestros residentes y concurrentes.</p>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-      <p class="Nos-par"> Nuestra residencia es amplia y cuenta con varios espacios, entre ellos tenemos el espacio de hogar con más de 8 habitaciones compartidas de 4 personas cada una, tambien las instalaciones cuentan con 5 baños para la comodidad de los residentes y/o concurrentes, asi como también 2 patios, cocina, amplio comedor y 4 salones donde se brindan los distintos talleres.</p>
+      <div class="col_Nos">
+          <p>Nuestra residencia es amplia y cuenta con varios espacios, entre ellos tenemos el espacio de hogar con más de 8 habitaciones compartidas de 4 personas cada una, tambien las instalaciones cuentan con 5 baños para la comodidad de los residentes y/o concurrentes, asi como también 2 patios, cocina, amplio comedor y 4 salones donde se brindan los distintos talleres.</p>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-      <p class="Nos-par"> Si querés venir a conocernos nos encontramos en la localidad de Caseros, bs as (zona oeste)
-        colectivos que te acercan 123, 47, 343, tren Mitre (Estacion Caseros)
-        te esperamos no dudes en hablarnos por nuestras redes, con nuestro contacto o llamandonos a nuestro numero.</p>
-    </div>
+      <div class="col_Nos">
+          <p>Si querés venir a conocernos nos encontramos en la localidad de Caseros, bs as (zona oeste)
+            colectivos que te acercan 123, 47, 343, tren Mitre (Estacion Caseros)
+            te esperamos no dudes en hablarnos por nuestras redes, con nuestro contacto o llamandonos a nuestro numero.</p>
+      </div>
   </div>
-</div>
   <div class="containerr mt-3">
     <div class="col-sm-12 col-md-6 col-lg-4">
     <img src="./img/nosotros/img1nos.jpg" class="img-thumbnail" alt="Cinque Terre" width="420" height="236">
