cambio en nosotros container fluid

--- a/nosotros.html
+++ b/nosotros.html
@@ -134,7 +134,7 @@
   </div>
 </div>
 <footer >
-      <div class="container_F">
+      <div class="container_fluid">
         <h3 class="h3-foot">SEGUINOS EN NUESTRAS REDES</h3>
         <div class="row">
             <div class="col"><a href=""><i class="fab fa-facebook"></i></a></div>
